cmake_minimum_required(VERSION 3.27)
project(AndroidFrameworkTest)

set(CMAKE_CXX_STANDARD 17)
include_directories(/usr/include)

add_executable(AndroidFrameworkTest main.cpp
        LinearList/SqList.cpp
        LinearList/SqList.h
        LinearList/LinkList.cpp
        LinearList/LinkList.h
        common.h
        LinearList/DuLinkList.cpp
        LinearList/DuLinkList.h
        LinearList/LinearList.cpp
        StackQueue/SqStack.cpp
        StackQueue/SqStack.h
        StackQueue/LinkStack.cpp
        StackQueue/LinkStack.h
        StackQueue/SqQueue.cpp
        StackQueue/SqQueue.h
        StackQueue/test.cpp
        StackQueue/test.h
        StackQueue/LinkQueue.cpp
        StackQueue/LinkQueue.h
        StackQueue/commonSQ.h
        String/String.cpp
        String/String.h
        String/commonString.h
        String/testString.cpp
        String/testString.h
        String/SearchString.cpp
        String/SearchString.h
        String/searchFile.cpp
        String/searchFile.h
        String/commonString.cpp
        String/testSearchFile.cpp
        Tree/BiTree.cpp
        Tree/BiTree.h
        Tree/testTree.cpp
        Tree/testTree.h
        Tree/BiTreeAlgorithm.cpp
        Tree/BiTreeAlgorithm.h
        Graph/AMGraph.cpp
        Graph/AMGraph.h
        Graph/ALGraph.cpp
        Graph/ALGraph.h
        Graph/Graph.h
        Graph/Graph.cpp
        Graph/testGraph.cpp
        Graph/testGraph.h
        Graph/GraphAlgorithm.cpp
        Graph/GraphAlgorithm.h
        Graph/GraphExercise.cpp
        Graph/GraphExercise.h
        Search/testSearch.cpp
        Search/testSearch.h
        Search/SqSearch.cpp
        Search/SqSearch.h
        Search/Search.cpp
        Search/Search.h
        Search/BiTreeSearch.cpp
        Search/BiTreeSearch.h
        Search/AVLSearch.cpp
        Search/AVLSearch.h
        Search/RedBlackTree.cpp
        Search/RedBlackTree.h
        Search/HashTable.cpp
        Search/HashTable.h
        Sort/testSort.cpp
        Sort/testSort.h
        Sort/InsertSort.cpp
        Sort/InsertSort.h
        common.cpp
        Sort/Sort.cpp
        Sort/Sort.h
        Sort/SwapSort.cpp
        Sort/SwapSort.h
        Sort/SelectionSort.cpp
        Sort/SelectionSort.h
        Sort/RadixSort.cpp
        Sort/RadixSort.h
)

